compiler/tests/fa/errors/bitwise_float.salam
// انتظار: خطا۰۲۱
// زبان: فارسی
تابع اصلی:
    الف := 1.5
    چاپ الف & 2
تمام
